gobmkida/g1/place_free_handicap
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:720:1: error: use of undeclared identifier 'number_of_matches'
number_of_matches = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:722:7: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
if ( !number_of_matches ) 
      ^~~~~~~~~~~~~~~~~
      number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:724:6: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
if ( number_of_matches <= 0 ) 
     ^~~~~~~~~~~~~~~~~
     number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:730:6: error: use of undeclared identifier 'handicap_matches'
v3 = handicap_matches; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:731:30: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
v4 = 24LL * ( unsigned int)( number_of_matches - 1) + 10064248; 
                             ^~~~~~~~~~~~~~~~~
                             number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:732:6: error: use of undeclared identifier 'handicap_matches'
v5 = handicap_matches; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:736:16: error: incomplete definition of type 'struct handicap_match'
if ( value < v5->value ) 
             ~~^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:737:11: error: incomplete definition of type 'struct handicap_match'
value = v5->value; 
        ~~^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:738:1: error: arithmetic on a pointer to an incomplete type 'struct handicap_match'
++v5; 
^ ~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:745:8: error: incomplete definition of type 'struct handicap_match'
if ( v3->value >= value - 10 ) 
     ~~^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:746:15: error: incomplete definition of type 'struct handicap_match'
v8 = 1 << ( v3->value - value + 10); 
            ~~^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:747:3: error: incomplete definition of type 'struct handicap_match'
v3->value = v8; 
~~^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:749:1: error: arithmetic on a pointer to an incomplete type 'struct handicap_match'
++v3; 
^ ~~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:684:8: note: forward declaration of 'struct handicap_match'
struct handicap_match *v3; // rax 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:754:7: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
v10 = number_of_matches; 
      ^~~~~~~~~~~~~~~~~
      number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:755:6: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
if ( number_of_matches <= 0 ) 
     ^~~~~~~~~~~~~~~~~
     number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:761:12: error: use of undeclared identifier 'handicap_matches'
v11 = v9 - handicap_matches[0].value; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:768:20: error: use of undeclared identifier 'handicap_matches'
v12 = ( _DWORD *)( handicap_matches + 24); 
                   ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:770:18: error: use of undeclared identifier 'number_of_matches'; did you mean 'number_of_dragons'?
while ( ++v13 != number_of_matches ) 
                 ^~~~~~~~~~~~~~~~~
                 number_of_dragons
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/liberty.h:928:12: note: 'number_of_dragons' declared here
extern int number_of_dragons;
           ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:782:10: error: use of undeclared identifier 'handicap_matches'
anchor = handicap_matches[v10].anchor; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:783:16: error: expected identifier or '('
struct pattern = handicap_matches[v10].pattern; 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/engine/handicap.c:784:6: error: use of undeclared identifier 'handicap_matches'
ll = handicap_matches[v10].ll; 
     ^
21 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/place_free_handicap/src/obj/1/handicap.o] Error 1
